--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ error-chain = "0.10.0"
 log = "0.3.8"
 serde = "1.0.8"
 serde_derive = "1.0.8"
+tempdir = "0.3.5"
+
+[dev-dependencies]
+pretty_assertions = "0.2.0"
